<resources>
    <string name="app_name">Владимир Лысак</string>
    <string name="textRating">5</string>
    <string name="textViewRating">Рейтинг</string>
    <string name="textProjects">555</string>
    <string name="textViewWritenLines">Написано строк кода</string>
    <string name="textViewProjects">Проектов</string>
    <string name="textPhone">+8(093)555-44-33</string>
    <string name="hintMobliePhone">Мобильный телефон</string>
    <string name="textEmail">vladimir@gmail.com</string>
    <string name="hintEmail">E-mail</string>
    <string name="textVk">https://vk.com/id81835087</string>
    <string name="hintVk">Профиль Вконтакте</string>
    <string name="textGithub">https://github.com/vladimir-sumy/DevIntensive</string>
    <string name="hintGithub">Репозиторий</string>
    <string name="textAbout">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hintAbout">О себе</string>
</resources>
