<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/color_grey"
        android:baselineAligned="false"
        android:layout_marginBottom="@dimen/spacing_small_8">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/spacing_medium_32"
            android:layout_marginTop="@dimen/spacing_medium_32">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="24sp"
                android:textColor="@color/color_white"
                android:text="@string/textRating"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="14sp"
                android:textColor="@color/color_white"
                android:text="@string/textViewRating"/>

        </LinearLayout>

        <View
            android:layout_gravity="center_vertical"
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="@color/color_delimiter" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/spacing_medium_32"
            android:layout_marginTop="@dimen/spacing_medium_32"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="24sp"
                android:textColor="@color/color_white"
                android:text="@string/textProjects"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="14sp"
                android:textColor="@color/color_white"
                android:text="@string/textViewWritenLines"/>

        </LinearLayout>

        <View
            android:layout_gravity="center_vertical"
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="@color/color_delimiter" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/spacing_medium_32"
            android:layout_marginTop="@dimen/spacing_medium_32"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="24sp"
                android:textColor="@color/color_white"
                android:text="@string/textProjects"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="14sp"
                android:textColor="@color/color_white"
                android:text="@string/textViewProjects"/>
        </LinearLayout>


    </LinearLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:contentDescription="Иконка"
                    android:src="@drawable/ic_call_black_24dp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:gravity="center_vertical">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:hint="@string/hintMobliePhone"
                            android:text="@string/textPhone"
                            android:layout_width="wrap_content"
                            android:inputType="phone"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>
            </LinearLayout>

            <View style="@style/horDelimiter" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/spacing_small_8"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:contentDescription="Иконка"
                    android:src="@drawable/ic_email_black_24dp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:gravity="center_vertical"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:inputType="textEmailAddress"
                            android:hint="@string/hintEmail"
                            android:text="@string/textEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>
            </LinearLayout>

            <View style="@style/horDelimiter" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/vk"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:gravity="center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:inputType="textUri"
                            android:hint="@string/hintVk"
                            android:text="@string/textVk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View style="@style/horDelimiter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:layout_width="@dimen/size_small_24"
                    android:layout_height="@dimen/size_small_24"
                    android:layout_marginTop="@dimen/size_small_24"
                    android:src="@drawable/github"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:gravity="center_vertical"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:inputType="textMultiLine"
                            android:hint="@string/hintGithub"
                            android:text="@string/textGithub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>


            </LinearLayout>




            <View style="@style/horDelimiter" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_small_24"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    android:layout_width="@dimen/size_small_24"
                    android:layout_height="@dimen/size_small_24"
                    android:layout_marginTop="@dimen/size_small_24"
                    android:src="@drawable/ic_account_circle_black_24dp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:gravity="center_vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText


                            android:hint="@string/hintAbout"
                            android:text="@string/textAbout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <View style="@style/horDelimiter" />



        </LinearLayout>
</android.support.v4.widget.NestedScrollView>

</LinearLayout>
